# fory

./: .asf.yaml  .bazelrc  .gitignore  .spi.yml  AGENTS.md  AI_CONTRIBUTION_POLICY.md  AI_CONTRIBUTION_POLICY1.md  AI_POLICY.md  BUILD  CLAUDE.md  CONTRIBUTING.md  LICENSE  MODULE.bazel  Package.swift  README.md  SECURITY.md  THREAT_MODEL.md  dev_list_ai_policy_discuss_email.txt  licenserc.toml
.agents/: README.md  ci-and-pr.md  docs-and-formatting.md  repo-reference.md
.agents/languages/: cpp.md  csharp.md  dart.md  go.md  java.md  javascript.md  kotlin.md  python.md  rust.md  scala.md  swift.md
.agents/testing/: integration-tests.md
.github/: maven-style-matcher.json  pull_request_template.md  sync.yml
.github/workflows/: build-containerized-pr.yml  build-containerized-release.yml  build-native-pr.yml  build-native-release.yml  ci.yml  clean-pr-body.yml  lint.yml  pr-lint.yml  release-compiler.yaml  release-csharp.yaml  release-dart.yaml  release-java-snapshot.yaml  release-javascript.yaml  release-python.yaml  release-rust.yaml  release.yaml  sync.yml
bazel/: BUILD.nanobind  cython.BUILD  cython_library.bzl  fory_deps_setup.bzl  nanobind.bzl
bazel/py/: BUILD.tpl  extensions.bzl  python_configure.bzl  variety.tpl
benchmarks/cpp/: CMakeLists.txt  README.md  benchmark.cc  benchmark_report.py  run.sh
benchmarks/cpp_benchmark/: README.md  benchmark.cc  benchmark_report.py  profile.sh  run.sh
benchmarks/cpython_benchmark/: fory_benchmark.py
benchmarks/csharp/: BenchmarkModels.cs  BenchmarkSerializers.cs  Fory.CSharpBenchmark.csproj  README.md  benchmark_report.py  run.sh
benchmarks/dart/: .gitignore  README.md  analysis_options.yaml  benchmark_report.py  build.yaml  profile.sh  pubspec.yaml  run.sh
benchmarks/go/: README.md  benchmark_report.py  go.mod  models.go  run.sh
benchmarks/go_benchmark/: README.md  benchmark_report.py  benchmark_test.go  models.go
benchmarks/java/: benchmark_report.py  pom.xml  run.sh
benchmarks/java25/: README.md  pom.xml
benchmarks/java_benchmark/: README.md
ci/: build_linux_wheels.py  deploy.sh  extract_cpp_doc_code.py  format.sh  publish-nuget.sh  release.py  run_ci.py  run_ci.sh
compiler/: README.md  pyproject.toml
compiler/examples/: common.fdl  demo.fdl  service.fdl  user.fdl
compiler/extension/: fory_options.proto
compiler/fory_compiler/: __init__.py  cli.py
compiler/fory_compiler/frontend/: __init__.py
compiler/fory_compiler/frontend/fbs/: __init__.py  parser.py  translator.py
compiler/fory_compiler/frontend/fdl/: __init__.py  lexer.py  parser.py
compiler/fory_compiler/frontend/proto/: __init__.py  ast.py  parser.py  translator.py
compiler/fory_compiler/generators/: __init__.py  base.py  cpp.py  csharp.py  dart.py  go.py  java.py  javascript.py  kotlin.py  python.py  rust.py  scala.py  swift.py
compiler/fory_compiler/generators/services/: base.py  csharp.py  dart.py  go.py  javascript.py  kotlin.py  python.py  rust.py  scala.py
compiler/fory_compiler/ir/: __init__.py  ast.py  construction.py  emitter.py  types.py  validator.py
compiler/fory_compiler/parser/: __init__.py  ast.py  lexer.py  parser.py
compiler/fory_compiler/tests/: test_collection_nesting.py  test_csharp_generator.py  test_dart_generator.py  test_fbs_frontend.py  test_fbs_service.py  test_fdl_emitter.py  test_fdl_service.py  test_generated_code.py  test_imports.py  test_ir_service_validation.py  test_javascript_codegen.py  test_kotlin_generator.py  test_message_defaults.py  test_nested_types.py  test_package_options.py  test_proto_frontend.py  test_proto_service.py  test_scala_generator.py  test_service_codegen.py  test_service_example.py  test_swift_generator.py  test_weak_ref.py  test_xlang_type_system.py
compiler/tests/: test_imports.py  test_nested_types.py  test_package_options.py
cpp/: CMakeLists.txt  README.md
csharp/: Directory.Build.props  README.md
dart/: CHANGELOG.md  README.md  pubspec.yaml
docs/: DEVELOPMENT.md  README.md
go/: README.md
integration_tests/: README.md
java/: README.md  checkstyle.xml  pom.xml
javascript/: README.md  jest.config.js  package-lock.json  package.json
kotlin/: README.md  pom.xml
python/: README.md  pyproject.toml  setup.py
rust/: Cargo.toml  README.md  debug_trait_parsing.rs  simple_debug_test.rs  test_debug.rs  test_enum  test_extension_default  test_macro_enum  test_macro_full  test_minimal_debug.rs  test_no_default  test_orphan  test_orphan_real  test_trait_enum  test_typeid  test_user_perspective  test_workaround
rust/benches/: Cargo.toml  README.md  benchmark_plot.py  benchmark_report.py  build.rs
rust/benches/benches/: buffer_read_bench.rs  buffer_write_bench.rs  serialization_bench.rs  simple_struct_deserialize.rs
rust/benches/proto/: complex.proto  medium.proto  realworld.proto  simple.proto
rust/benches/src/: lib.rs  main.rs
rust/benches/src/models/: complex.rs  medium.rs  mod.rs  realworld.rs  simple.rs
rust/benches/src/serializers/: fury.rs  json.rs  mod.rs  protobuf.rs
scala/: README.md  build.sbt
swift/: Package.swift  README.md
tasks/: lessons.md  todo.md
(+1841 files in other folders)
