[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fory-compiler"
version = "0.1.0"
description = "FDL (Fory Definition Language) compiler for Apache Fory cross-language serialization"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Compilers",
]
keywords = ["fory", "serialization", "codegen", "idl", "compiler"]

[project.scripts]
fory = "fory_compiler.cli:main"

[project.urls]
Homepage = "https://github.com/apache/fory"
Documentation = "https://fory.apache.org"
Repository = "https://github.com/apache/fory"

[tool.setuptools.packages.find]
where = ["."]
include = ["fory_compiler*"]
